--- a/assets/css/codepen.css
+++ b/assets/css/codepen.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap');
+.testing {
+	cursor: pointer;
+}
 
 .card {
 	cursor: pointer;
